# detect_music_in_video

./: .gitignore  README.md  ranges.json  ranges1.json
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.vue
client/src/api/: chzzk.api.ts
client/src/assets/: app.css  main.css
client/src/components/: ChzzkVideoDetail.vue  ChzzkVideoList.vue  ChzzkVideoSide.vue  HlsVideo.vue  Layout.vue
client/src/components/admin/: TimelineEditor.vue  VideoList.vue  VideoPlayer.vue
client/src/composables/: chzzk-video.keys.ts  use-chzzk-video.ts
client/src/router/: index.ts
client/src/types/: chzzk.d.ts
client/src/utils/: common-utils.ts  my-fetch.ts
client/src/views/: IndexView.vue  MusicManageView.vue  VideoManageView.vue
extension/: index.html  manifest.json
extension/assets/: styles.css
extension/js/: MusicSearchController.js  VideoTimelineController.js  api.js  background.js  constants.js  content.js  storage.js  utils.js
music/: music.py  music2.py  music3.py
server/: main.py  pyproject.toml  requirements.txt
server/db/: db_connection.py  db_helper.py
server/libs/: utils.py
server/libs/music/: music.py  requirements.txt
server/log/: log_config.py
server/models/: chzzk_model.py  video_model.py
server/repositories/: chzzk_repository.py
server/routers/: chzzk.py  chzzk_router.py  youtube_router.py
server/services/: chzzk.py  chzzk_service.py
