[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "everoad",email = "everoad102@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "absl-py (==2.1.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "astunparse (==1.6.3)",
    "audioread (==3.0.1)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.0)",
    "cycler (==0.12.1)",
    "decorator (==5.2.0)",
    "dnspython (==2.7.0)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.8)",
    "fastapi-cli (==0.0.7)",
    "flatbuffers (==25.2.10)",
    "fonttools (==4.56.0)",
    "gast (==0.6.0)",
    "google-pasta (==0.2.0)",
    "greenlet (==3.1.1)",
    "grpcio (==1.70.0)",
    "h11 (==0.14.0)",
    "h5py (==3.13.0)",
    "httpcore (==1.0.7)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "imageio-ffmpeg (==0.6.0)",
    "importlib-metadata (==8.6.1)",
    "importlib-resources (==6.5.2)",
    "jinja2 (==3.1.5)",
    "joblib (==1.4.2)",
    "keras (==3.8.0)",
    "kiwisolver (==1.4.7)",
    "lazy-loader (==0.4)",
    "libclang (==18.1.1)",
    "librosa (==0.10.2.post1)",
    "llvmlite (==0.43.0)",
    "mariadb (==1.1.12)",
    "markdown (==3.7)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.9.4)",
    "mdurl (==0.1.2)",
    "ml-dtypes (==0.4.1)",
    "msgpack (==1.1.0)",
    "namex (==0.0.8)",
    "noisereduce (==3.0.3)",
    "numba (==0.60.0)",
    "numpy (==2.0.2)",
    "opt-einsum (==3.4.0)",
    "optree (==0.14.0)",
    "packaging (==24.2)",
    "pillow (==11.1.0)",
    "platformdirs (==4.3.6)",
    "pooch (==1.8.2)",
    "protobuf (==5.29.3)",
    "pycparser (==2.22)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pygments (==2.19.1)",
    "pyparsing (==3.2.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "python-multipart (==0.0.20)",
    "pyyaml (==6.0.2)",
    "requests (==2.32.3)",
    "rich (==13.9.4)",
    "rich-toolkit (==0.13.2)",
    "ruptures (==1.1.9)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.13.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soundfile (==0.13.1)",
    "soxr (==0.5.0.post1)",
    "sqlalchemy (==2.0.38)",
    "starlette (==0.45.3)",
    "tensorboard (==2.18.0)",
    "tensorboard-data-server (==0.7.2)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "termcolor (==2.5.0)",
    "tf-keras (==2.18.0)",
    "threadpoolctl (==3.5.0)",
    "tqdm (==4.67.1)",
    "typer (==0.15.1)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "uvicorn (==0.34.0)",
    "watchfiles (==1.0.4)",
    "websockets (==15.0)",
    "werkzeug (==3.1.3)",
    "wrapt (==1.17.2)",
    "zipp (==3.21.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "tensorflow-hub (>=0.16.1,<0.17.0)",
    "tensorflow-cpu (==2.18.0)",
    "yt-dlp (>=2025.2.19,<2026.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
